--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "build": "echo 'No build script defined yet'",
+    "dev": "nodemon ./bin/www"
   },
   "dependencies": {
     "bcrypt": "^5.0.0",
@@ -17,7 +19,10 @@
     "knex": "^0.95.4",
     "mysql": "^2.18.1",
     "nodemailer": "^6.5.0",
-    "nodemon": "^2.0.7",
     "redis": "^3.1.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
+
