--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "build": "echo 'No build script defined yet'",
+    "build": "echo 'Building project...' && mkdir -p social && cp -r src/* social/",
     "dev": "nodemon ./bin/www"
   },
   "dependencies": {
@@ -25,4 +25,3 @@
     "nodemon": "^2.0.7"
   }
 }
-
