--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "build": "mkdir -p social && if [ -d src ]; then cp -r src/* social/; else echo 'src directory does not exist'; fi",
+    "build": "webpack --mode production",
     "dev": "nodemon ./bin/www"
   },
   "dependencies": {
@@ -22,6 +22,10 @@
     "redis": "^3.1.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "webpack": "^5.0.0",
+    "webpack-cli": "^4.0.0",
+    "cssnano": "^5.0.0",
+    "terser-webpack-plugin": "^5.0.0"
   }
 }
