--- a/Simple.env
+++ b/Simple.env
@@ -1,7 +1,8 @@
-jwtSecret=
-MAILUSER =
-MAILPASSWROD =
-DBUSER =
-DBPASSWORD =
-DBNAME =
-
+JWT_SECRET=your_jwt_secret
+MAILUSER=your_email@gmail.com
+MAILPASSWORD=your_email_password
+DBUSER=root
+DBPASSWORD=password
+DBNAME=social_app
+ALLOWED_ORIGINS=http://localhost:3000
+PORT=3000
